--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.4.1",
     "sweetalert2": "^11.4.1",
     "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^2.1.4"
