--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.16.1"
+    "sequelize": "^6.16.1",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-alpha.5"
